Changing build docker image push action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,3 +35,4 @@ jobs:
           platforms: linux/amd64, linux/arm64
           push: true
           tags: ${{ github.repository }}:latest
+          target: multi-line-app
