Updating log messages and k8s deployment to deploy both apps in the same pod

--- a/kubernetes/fluent-multiline-app-deployment.yaml
+++ b/kubernetes/fluent-multiline-app-deployment.yaml
@@ -22,6 +22,9 @@ spec:
         app: fluent-multiline-app
     spec:
       containers:
-        - name: fluent-multiline-app
-          image: ricsanfre/fluent-multiline-app:latest
+        - name: fluent-multiline-go
+          image: ricsanfre/fluent-multiline-app:go
+          imagePullPolicy: IfNotPresent
+        - name: fluent-multiline-java
+          image: ricsanfre/fluent-multiline-app:java
           imagePullPolicy: IfNotPresent
