--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,12 +27,22 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build multiarch and push image.
+      - name: Build go app multiarch and push image.
         uses: docker/build-push-action@v2
         with:
-          context: ./
+          context: ./go/.
           file: Dockerfile
           platforms: linux/amd64, linux/arm64
           push: true
-          tags: ${{ github.repository }}:latest
+          tags: ${{ github.repository }}:java
+          target: multi-line-app
+      
+      - name: Build java app multiarch and push image.
+        uses: docker/build-push-action@v2
+        with:
+          context: ./java/.
+          file: Dockerfile
+          platforms: linux/amd64, linux/arm64
+          push: true
+          tags: ${{ github.repository }}:go
           target: multi-line-app
