Simplifying java application

--- a/kubernetes/fluent-multiline-app-deployment.yaml
+++ b/kubernetes/fluent-multiline-app-deployment.yaml
@@ -8,7 +8,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fluent-multiline-app
-  namespace: fluent-test
+  namespace: fluent-tests
   labels:
     app: fluent-multiline-app
 spec:
